# cpp_projects

./: README.md
FirstProject/: CMakeLists.txt  main.cpp
SecondProject/: CMakeLists.txt  main.cpp  openmp_example.cpp
SomeOpenMPFirst/: CMakeLists.txt  main.cpp  order.cpp  parallel_order_1.cpp  parallel_order_2.cpp  parallel_order_3.cpp
SomeOpenMPSecond/: CMakeLists.txt  matrix_and_vector.cpp  parallel_arithmetic.cpp  time_metrics.cpp  two_parallel.cpp
SomeOpenMPThird/: CMakeLists.txt  atomic_counter.cpp  main.cpp  max_counter.cpp
